tests/baselines/reference/parserMethodSignature5(strict=true).errors.txt
parserMethodSignature5.ts(2,3): error TS7010: '"E"', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserMethodSignature5.ts (1 errors) ====
    interface I {
      "E"();
      ~~~~~~
!!! error TS7010: '"E"', which lacks return-type annotation, implicitly has an 'any' return type.
    }